# tag_palette

./: Dockerfile
app/: .gitignore  README.md  clean.py  config.py  main.py  pyproject.toml  watcher.py
app/db/: engine.py  init.py  models.py  query.py
app/gui/: app.py  base.py  original.py  thumbnail.py  viewmodel.py
app/gui/components/: button.py  favorite_button.py
app/migrations/: env.py
app/migrations/versions/: b0390fac64bd_add_category_table_and_link_to_tag.py  fa5933836573_add_view_count_column_to_images.py
app/tests/: test_viewmodel.py
app/utils/: clipboard.py  embedding.py  file_operations.py  folder.py  image.py  logger.py  pose.py  profiling.py  tag_embedding.py  tagger.py
