[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=11.2.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "psutil>=7.0.0",
    "watchdog>=6.0.0",
]
