[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=11.2.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "pytest-pythonpath>=0.7.3",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]