[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "deepdanbooru==1.0.3",
    "huggingface-hub==0.28.1",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "onnxruntime-gpu>=1.22.0",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "alembic>=1.16.1",
    "nuitka>=2.7.6",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "pytest-pythonpath>=0.7.3",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
